--- a/forum/WebContent/index.xhtml
+++ b/forum/WebContent/index.xhtml
@@ -10,6 +10,7 @@
 </head>
 <h:body>	
 	<h:outputText value="Forum de discursão"/>
+	<h:outputText value="Agora com o versionamento de código pelo github"/>
 	<h:form id="formprincipal">
 		<h:outputText value="Consultar pelo Título"/>
 		<table>
